<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="two">2</string>
    <string name="zero">0</string>
    <string name="order">Order</string>
    <string name="orderSummary">Order Summary</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name="creme">Whipped creme</string>
    <string name="Chocolate">Chocolate</string>
    <string name="name">Name: <xliff:g id="name" example="Migha">%s</xliff:g></string>
    <string name="nameEdittext">Name</string>

    <string name="add_whipped_creme">Add whipped creme? </string>
    <string name="add_chocolate">Add Chocolate? </string>
    <string name="total">Total: $</string>
    <string name="buy_less_coffee">You cannot buy more than 100 coffees</string>
    <string name="buy_more_coffee">You cannot buy less than 1 coffee</string>
    <string name="thank_you">Thank you</string>

</resources>
